# game-studio-crew

./: .gitignore  Cargo.toml  README.md
crates/studio-agents/: Cargo.toml
crates/studio-agents/src/: layout.rs  lib.rs
crates/studio-budget/: Cargo.toml
crates/studio-budget/src/: lib.rs
crates/studio-context/: Cargo.toml
crates/studio-context/src/: capsule.rs  ladder.rs  lib.rs
crates/studio-core/: Cargo.toml
crates/studio-core/src/: git.rs  lib.rs  proc.rs  spec.rs  stream.rs
crates/studio-core/testdata/: stream-real.ndjson
crates/studio-engine/: Cargo.toml
crates/studio-engine/helpers/: studio_ci.gd
crates/studio-engine/profiles/: godot.toml  ue5.toml  unity.toml
crates/studio-engine/src/: lib.rs
crates/studio-events/: Cargo.toml
crates/studio-events/src/: coalesce.rs  lib.rs
crates/studio-index/: Cargo.toml
crates/studio-index/src/: lang.rs  lib.rs  scene.rs  schema.rs  walk.rs
crates/studio-index/src/extract/: cpp.rs  csharp.rs  gdscript.rs  mod.rs
crates/studio-mcp/: Cargo.toml
crates/studio-mcp/src/: lib.rs
crates/studio-server/: Cargo.toml
crates/studio-server/src/: lib.rs
crates/studio-server/web/: floor.html  scene.js  voxel.js
crates/studio-standards/: Cargo.toml
crates/studio-standards/src/: lib.rs
crates/studio-store/: Cargo.toml
crates/studio-store/src/: lib.rs  schema.rs
crates/studio-verify/: Cargo.toml
crates/studio-verify/src/: driver.rs  lib.rs  parsers.rs  repair.rs
crates/studio-workflow/: Cargo.toml
crates/studio-workflow/src/: exec.rs  lib.rs  plan.rs
crates/studio-workflow/workflows/: bugfix.toml  feature.toml  release.toml  sprint_planning.toml
crates/studiod/: Cargo.toml
crates/studiod/src/: charters.rs  m3.rs  m4.rs  main.rs  studio.rs  tools.rs  wf.rs
docs/design/: 00-overview.md  01-orchestrator-core.md  02-context-engine.md  03-state-store.md  04-agent-graph.md  05-event-protocol.md  06-budget-governance.md  07-engine-layer.md  08-verification.md  09-workflows.md  10-standards-and-trust.md  11-index-and-bootstrap.md  12-visual-workspace.md  13-risks.md
docs/design/adr/: 0001-claude-cli-as-worker.md  0002-thirteen-roles.md  0003-top-down-not-isometric.md  0004-explicit-context-control-not-bare.md  0005-voxel-3d-floor.md
probes/: README.md  analyze.js  gen-prefix.js  index-scan.sh  index-tokens.js  index-tokens.sh  mcp-probe-server.js  run-probes.sh
