[package]
name = "studio-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tree-sitter = "0.26"
tree-sitter-c-sharp = "0.23"
tree-sitter-gdscript = "6"

[dev-dependencies]
tempfile = "3"
