[package]
name = "studio-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
studio-agents.workspace = true
studio-events.workspace = true
studio-store.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
