[package]
name = "studio-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
studio-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
quick-xml = "0.36"

[dev-dependencies]
tempfile = "3"
