[package]
name = "studio-workflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
studio-agents.workspace = true
studio-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8"
