[package]
name = "studiod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "studiod"
path = "src/main.rs"

[dependencies]
studio-events.workspace = true
studio-context.workspace = true
studio-store.workspace = true
studio-core.workspace = true
studio-mcp.workspace = true
studio-engine.workspace = true
studio-verify.workspace = true
studio-agents.workspace = true
studio-server.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
ulid.workspace = true
